# BrowserGym

./: .gitignore  .pre-commit-config.original.yaml  .pre-commit-config.yaml  email2workarena_automation_exp.ipynb  list_tasks.py  pyproject.pab.toml  pyproject.toml  requirements.txt  run_experiments.sh  run_experiments_uv.sh  setup_servicenow.md  uv_project_setup.md  uv_run_experiments.sh  view_task_configs_uv.sh
agents/rag_agent/: agent.py  support.txt
agents/simple_agent/: agent.py  run_demo.py
agents/workflow_agent/: agent.py  run_demo.py
demo_agent/: run_demo.py
experiments/logging/: pathfinder.py  templates.py  trace_formatter.py  utils.py
experiments/statistics/: summary_statistics_report.py
experiments/utils/: view_task_configs.py
experiments/workflow/: 2025-02-25_workflow_ipad_mini_pab.txt  workflow_generator.py
experiments_ntbks/: task_workflow_generator.ipynb
results/: 2025-01-07_statistics.csv  2025-01-07_statistics.md
results/2024-12-30 Nidhir Runs/2025-01-05_15-27-22_DemoAgentArgs_on_workarena.servicenow.order-ipad-pro_14/: exp_args.pkl  experiment_analysis.md  package_versions.txt
results/2024-12-30 Nidhir Runs/2025-01-07_16-30-33_DemoAgentArgs_on_workarena.servicenow.order-ipad-mini_12/: exp_args.pkl  experiment_analysis.md  summary_info.json
results/2024-12-30 Nidhir Runs/2025-01-07_19-38-28_DemoAgentArgs_on_workarena.servicenow.order-ipad-mini_17-rag/: exp_args.pkl  experiment_analysis.md  summary_info.json
results/2024-12-30 Nidhir Runs/2025-01-08_17-53-54_DemoAgentArgs_on_workarena.servicenow.order-ipad-mini_0_withrag/: experiment_analysis.md  summary_info.json
results/2024-12-30 Nidhir Runs/2025-01-08_17-57-38_DemoAgentArgs_on_workarena.servicenow.order-ipad-mini_5_withrag/: experiment_analysis.md
results/2024-12-30 Nidhir Runs/2025-01-08_17-59-23_DemoAgentArgs_on_workarena.servicenow.order-ipad-pro_13_withrag/: exp_args.pkl  summary_info.json
results/2024-12-30_nidhir_runs/: 2025-01-07 summary statistics.md
results/2024-12-30_nidhir_runs/2025-01-05_15-27-22_DemoAgentArgs_on_workarena.servicenow.order-ipad-pro_14/: summary_info.json
results/2025-01-02 Batch gpt4o 2024-08/2025-01-02_11-48-13_DemoAgentArgs_on_workarena.servicenow.order-standard-laptop_0/: experiment_analysis.md
results/2025-01-02 batch gpt4o 2024-11/2025-01-02_11-04-54_DemoAgentArgs_on_workarena.servicenow.order-sales-laptop_29/: experiment_analysis.md
results/2025-01-02_batch_gpt4o_2024-08/: 2025-01-02 summary statistics.csv  2025-01-02 summary statistics.md
results/2025-01-02_batch_gpt4o_2024-11/: 2025-01-02 summary statistics.csv  2025-01-02 summary statistics.md
results/2025-01-02_batch_gpt4o_2024-11/2025-01-02_10-55-04_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_3 Apple.com/: experiment_analysis.md
results/2025-01-02_batch_gpt4o_2024-11/2025-01-02_11-00-06_DemoAgentArgs_on_workarena.servicenow.order-apple-watch_21 Apple.com/: experiment_analysis.md
results/2025-01-02_batch_gpt4o_2024-11/2025-01-02_11-02-23_DemoAgentArgs_on_workarena.servicenow.order-loaner-laptop_5/: experiment_analysis.md
results/2025-01-02_batch_gpt4o_2024-11/2025-01-02_11-07-51_DemoAgentArgs_on_workarena.servicenow.order-sales-laptop_32 BestBuy.com/: experiment_analysis.md
results/2025-01-03_batch/: 2025-01-03 summary statistics.csv  2025-01-03 summary statistics.md
results/2025-01-07_21-51-34_DemoAgentArgs_on_workarena.servicenow.order-loaner-laptop_9/: exp_args.pkl  experiment_analysis.md  summary_info.json
results/2025-01-08_10-20-58_DemoAgentArgs_on_workarena.servicenow.order-ipad-pro_6/: exp_args.pkl
results/2025-01-08_12-05-03_DemoAgentArgs_on_workarena.servicenow.order-loaner-laptop_12/: exp_args.pkl  summary_info.json
results/2025-01-08_12-24-10_DemoAgentArgs_on_workarena.servicenow.order-loaner-laptop_31/: exp_args.pkl  package_versions.txt  summary_info.json
results/2025-01-16_11-41-34_DemoAgentArgs_on_workarena.servicenow.order-sales-laptop_15/: exp_args.pkl  summary_info.json
results/2025-01-16_11-41-36_DemoAgentArgs_on_workarena.servicenow.order-development-laptop-p-c_3/: exp_args.pkl  summary_info.json
results/2025-01-16_11-41-38_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_28/: exp_args.pkl  summary_info.json
results/2025-01-16_11-41-40_DemoAgentArgs_on_workarena.servicenow.order-development-laptop-p-c_29/: exp_args.pkl  summary_info.json
results/2025-01-16_11-41-41_DemoAgentArgs_on_workarena.servicenow.order-development-laptop-p-c_12/: exp_args.pkl  summary_info.json
results/2025-02-13_13-51-02_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_24/: exp_args.pkl  summary_info.json
results/2025-02-13_13-51-02_DemoAgentArgs_on_workarena.servicenow.order-apple-watch_11/: exp_args.pkl  package_versions.txt  summary_info.json
results/2025-02-13_13-51-02_DemoAgentArgs_on_workarena.servicenow.order-apple-watch_17/: exp_args.pkl  summary_info.json
results/2025-02-13_13-51-02_DemoAgentArgs_on_workarena.servicenow.order-apple-watch_31/: exp_args.pkl  summary_info.json
results/2025-02-13_13-51-02_DemoAgentArgs_on_workarena.servicenow.order-apple-watch_7/: exp_args.pkl  summary_info.json
results/2025-02-13_13-52-35_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_25/: exp_args.pkl  summary_info.json
results/2025-02-13_13-52-36_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_1/: exp_args.pkl  summary_info.json
results/2025-02-13_13-52-37_DemoAgentArgs_on_workarena.servicenow.order-standard-laptop_28/: exp_args.pkl
results/2025-02-13_13-52-38_DemoAgentArgs_on_workarena.servicenow.order-apple-mac-book-pro15_8/: exp_args.pkl  summary_info.json
results/2025-02-13_13-52-41_DemoAgentArgs_on_workarena.servicenow.order-standard-laptop_17/: exp_args.pkl
results/runs_nidhir/: 2025-01-07 summary statistics.csv
results/runs_nidhir/2024-12-17_04-11-25_DemoAgentArgs_on_workarena.servicenow.order-ipad-pro_14/: experiment_analysis.md
results/runs_nidhir/2024-12-18_05-51-11_DemoAgentArgs_on_workarena.servicenow.order-ipad-mini_18/: experiment_analysis.md
(+20 files in other folders)
