[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.8",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==25.1.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "black>=25.1.0",
    "bleach==6.2.0",
    "browsergym",
    "browsergym-assistantbench",
    "browsergym-core",
    "browsergym-experiments",
    "browsergym-miniwob",
    "browsergym-visualwebarena",
    "browsergym-webarena",
    "browsergym-workarena",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "dataclasses-json==0.6.7",
    "datasets==3.3.2",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "distro==1.9.0",
    "english-words==2.0.1",
    "executing==2.2.0",
    "faker==36.2.2",
    "farama-notifications==0.0.4",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "filetype==1.2.0",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "google-ai-generativelanguage==0.6.16",
    "google-api-core==2.24.1",
    "google-api-python-client>=2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-firestore>=2.20.1",
    "google-cloud-pubsub>=2.29.0",
    "googleapis-common-protos==1.69.0",
    "greenlet==3.0.3",
    "groq==0.18.0",
    "grpcio==1.71.0rc2",
    "grpcio-status==1.71.0rc2",
    "gymnasium==1.1.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.29.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.0.1",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "isort>=6.0.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.8.2",
    "json5==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.5",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "langchain==0.3.20",
    "langchain-anthropic==0.3.9",
    "langchain-community==0.3.19",
    "langchain-core==0.3.41",
    "langchain-google-community[gmail]>=2.0.7",
    "langchain-google-genai==2.0.11",
    "langchain-groq==0.2.4",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-ollama==0.2.3",
    "langchain-openai==0.3.7",
    "langchain-text-splitters==0.3.6",
    "langgraph==0.3.5",
    "langgraph-checkpoint==2.0.16",
    "langgraph-prebuilt==0.1.1",
    "langgraph-sdk==0.1.53",
    "langsmith==0.3.11",
    "lxml==5.3.1",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numpy==2.2.3",
    "ollama==0.4.7",
    "openai==1.65.3",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "playwright==1.47.0",
    "portalocker==3.1.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pyee==12.0.0",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.2.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich>=13.9.4",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "ruff>=0.11.6",
    "sacrebleu==2.5.1",
    "scipy==1.15.2",
    "send2trash==1.8.3",
    "setuptools==75.8.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.38",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "terminado==0.18.1",
    "tiktoken==0.9.0",
    "tinycss2==1.4.0",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.1",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "weblinx==0.3.2",
    "weblinx-browsergym==0.0.1.dev14",
    "websocket-client==1.8.0",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::UserWarning:gymnasium.*:',  # too many "The obs is not within the observation space." warnings.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to be run sequantially (deselect with '-m \"not serial\"')"
]

[tool.uv.sources]
browsergym = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-assistantbench = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/assistantbench", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-core = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/core", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-experiments = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/experiments", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-miniwob = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/miniwob", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-visualwebarena = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/visualwebarena", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-webarena = { git = "https://github.com/Nid989/BrowserGym.git", subdirectory = "browsergym/webarena", rev = "6ff9339640d0f8595c9453deb19ace1210f66549" }
browsergym-workarena = { git = "https://github.com/Nid989/WorkArena.git", rev = "77750ce47f4bfb771eef80f0cabb651d53099c89" }
